# asventure

./: CMakeLists.txt  Drawing.cpp  Drawing.h  InitShip.h  Interface.cpp  Interface.h  background.h  character.cpp  character.h  collision.h  dialogue.cpp  dialogue.h  doublecmp.cpp  doublecmp.h  drawship.cpp  drawship.h  drawstats.cpp  drawstats.h  fight.cpp  fight.h  geometricvector.cpp  geometricvector.h  init.cpp  init.h  interface.cpp  interface.h  main.cpp  map.h  menu.h  pirates.cpp  pirates.h  pirateship.cpp  pirateship.h  planets.cpp  planets.h  player.h  police.cpp  police.h  policeship.cpp  policeship.h  (+7 more)
dialogues/: pirate0.dlg  planet0.dlg  police0.dlg
documentation/: doxy
init_files/: pirates.txt  police.txt
